--- a/force-app/main/default/classes/BulkifyApexClass.cls
+++ b/force-app/main/default/classes/BulkifyApexClass.cls
@@ -60,7 +60,7 @@ public class BulkifyApexClass {
     public void DeleteAccountsLi(){
         list<Account> DelAccovar = [SELECT Id, Customer_Status__c FROM Account where Name like 'Bill_test%' limit 165];
         if(!DelAccovar.isEmpty()){
-            integer i =0;
+            String='test';
             delete DelAccovar;
         }
         system.debug('successfully Deleted');
